--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,23 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: Production
     steps:
-      - uses: actions/checkout@v3
-      - name: Build & Deploy
-        env:
+      - name: Cloudflared SSH Run Remote Commands
+        uses: npgy/cloudflared-ssh-action@v2.0
+        with:
+          SSH_HOST: ${{ vars.SSH_HOST }}
+          USER_NAME: ${{ secrets.USER_NAME }}
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_HOST: ${{secrets.SSH_HOST}}
-          USER_NAME: ${{secrets.USER_NAME}}
-
-        run: |
-          echo "Deploying to Prod"
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.USER_NAME }}@${{ secrets.SSH_HOST }} '
-          cd /root/youknow &&
-          git reset --hard &&
-          git checkout main &&
-          git pull origin main &&
-          docker stop youknow &&
-          docker rm youknow &&
-          docker build -t youknow_nextjs . &&
-          docker run --detach --network tunnel --name youknow youknow_nextjs
-          '
+          PORT: ${{ secrets.PORT }}
+          commands: cd /root/youknow; git reset--hard; git checkout main; git pull origin main; docker stop youknow; docker rm youknow; docker build -t youknow_nextjs .; docker run --detach --network tunnel --name youknow youknow_nextjs
