--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Cloudflared SSH Run Remote Commands
         uses: npgy/cloudflared-ssh-action@v2.0
         with:
-          SSH_HOST: ${{ vars.SSH_HOST }}
-          USER_NAME: ${{ secrets.USER_NAME }}
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          PORT: ${{ secrets.PORT }}
+          host: ${{ vars.SSH_HOST }}
+          username: ${{ secrets.USER_NAME }}
+          private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.PORT }}
           commands: cd /root/youknow; git reset--hard; git checkout main; git pull origin main; docker stop youknow; docker rm youknow; docker build -t youknow_nextjs .; docker run --detach --network tunnel --name youknow youknow_nextjs
