--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
           username: ${{ secrets.USER_NAME }}
           private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.PORT }}
-          commands: cd /root/youknow; git reset --hard; git checkout main; git pull origin main; docker stop youknow; docker rm youknow; docker build -t youknow_nextjs .; docker run --detach --network tunnel --name youknow youknow_nextjs
+          commands: cd /root/youknow; git reset --hard; git checkout main; git pull origin main; docker stop youknow; docker rm youknow; docker rmi youknow_nextjs; docker image prune -a -f; docker build -t youknow_nextjs .; docker run --detach --network tunnel --name youknow youknow_nextjs
