--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.268.0",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
-    "openai": "^3.3.0",
-    "postcss": "8.4.28",
+    "openai": "^4.12.4", 
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
