major 0.1.1 (views, ui, footer, packages upd)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youknow",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -29,16 +29,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.3",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.268.0",
-    "next": "^13.5.6",
+    "next": "^14.0.3",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "openai": "^4.12.4",
     "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
