--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/third-parties": "^14.0.3",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -33,7 +34,7 @@
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.268.0",
     "next": "^14.0.3",
-    "next-auth": "^4.23.1",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "openai": "^4.12.4",
     "postcss": "^8.4.31",
