--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-intersection-observer": "^9.6.0",
     "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "use-debounce": "^10.0.0",
     "youtube-transcript": "^1.0.6",
     "zod": "^3.22.2"
   },
