--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-intersection-observer": "^9.6.0",
+    "sharp": "^0.33.2",
     "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
