--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,21 @@ NEXTAUTH_SECRET=''
 
 GOOGLE_CLIENT_ID=''
 GOOGLE_CLIENT_SECRET=''
-
 YANDEX_CLIENT_ID=''
 YANDEX_CLIENT_SECRET=''
+RESEND_API_KEY=''
+
+OPENAI_API_PROXY_URL=''
+
+EMAIL_SERVER_USER=resend
+EMAIL_SERVER_HOST=smtp.resend.com
+EMAIL_SERVER_PORT=465
+EMAIL_FROM=onboarding@resend.dev
 
 NEXT_PUBLIC_GA_MEASUREMENT_ID=''
 
+IMGUR_CLIENT_ID=''
+OPENAI_API_KEY=''
 UNSPLASH_API_KEY=''
 YOUTUBE_API_KEY=''
 NEXTAUTH_URL='http://localhost:3000'
