--- a/package.json
+++ b/package.json
@@ -1,30 +1,41 @@
 {
   "name": "youknow",
   "version": "0.1.1",
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "npx prisma generate && npx prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.11.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "@react-email/components": "0.0.16",
     "@tanstack/react-query": "^4.32.6",
-    "@types/node": "20.5.1",
+    "@tanstack/react-table": "^8.15.3",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "ai": "^3.0.31",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
@@ -32,27 +43,33 @@
     "eslint": "8.47.0",
     "eslint-config-next": "^14.0.3",
     "framer-motion": "^10.16.0",
+    "https-proxy-agent": "^7.0.4",
     "lucide-react": "^0.268.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "openai": "^4.12.4",
+    "nodemailer": "^6.9.13",
+    "openai": "^4.38.5",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "2.1.1",
     "react-hook-form": "^7.45.4",
     "react-intersection-observer": "^9.6.0",
+    "resend": "^3.2.0",
     "sharp": "^0.33.2",
     "stripe": "^13.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6",
     "use-debounce": "^10.0.0",
-    "youtube-transcript": "^1.0.6",
+    "youtube-transcript": "github:sinedied/youtube-transcript#a10a073ac325b3b88018f321fa1bc5d62fa69b1c",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "prisma": "^5.5.2"
+    "@types/node": "^20.12.5",
+    "prisma": "^5.11.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.4"
   }
 }
