--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "next dev",
     "build": "npx prisma generate && next build",
     "start": "next start",
+    "start:prod": "node server.js",
+    "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
     "lint": "next lint"
   },
   "dependencies": {
