--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "next dev",
     "build": "npx prisma generate && next build",
     "start": "next start",
-    "start:prod": "node server.js",
+    "start:prod": "node .next/standalone/server.js",
     "start:migrate:prod": "prisma migrate deploy && npm run start:prod",
     "lint": "next lint"
   },
