--- a/typescript_app/package.json
+++ b/typescript_app/package.json
@@ -14,64 +14,65 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.2.0",
+    "@hookform/resolvers": "^4.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.11.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@react-email/components": "0.0.16",
-    "@tanstack/react-query": "^4.32.6",
-    "@tanstack/react-table": "^8.15.3",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "ai": "^3.0.31",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.4.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "^14.0.3",
-    "framer-motion": "^10.16.0",
-    "https-proxy-agent": "^7.0.4",
-    "lucide-react": "^0.268.0",
-    "next": "^14.1.0",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.2.1",
-    "nodemailer": "^6.9.13",
-    "openai": "^4.38.5",
-    "postcss": "^8.4.31",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-email": "^2.1.4",
-    "react-hook-form": "^7.45.4",
-    "react-intersection-observer": "^9.6.0",
-    "resend": "^3.2.0",
-    "sharp": "^0.33.2",
-    "stripe": "^13.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "use-debounce": "^10.0.0",
+    "@prisma/client": "^6.4.1",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@react-email/components": "^0.0.33",
+    "@tailwindcss/postcss": "^4.0.12",
+    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-table": "^8.21.2",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "ai": "^4.1.54",
+    "autoprefixer": "10.4.21",
+    "axios": "^1.8.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "eslint": "9.22.0",
+    "eslint-config-next": "^15.2.2",
+    "framer-motion": "^12.4.13",
+    "https-proxy-agent": "^7.0.6",
+    "lucide-react": "^0.479.0",
+    "next": "^15.2.2",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.5",
+    "nodemailer": "^6.10.0",
+    "openai": "^4.86.2",
+    "postcss": "^8.5.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-email": "^3.0.7",
+    "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^9.16.0",
+    "resend": "^4.1.2",
+    "sharp": "^0.33.5",
+    "stripe": "^17.7.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "4.0.12",
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "youtube-transcript": "github:sinedied/youtube-transcript#a10a073ac325b3b88018f321fa1bc5d62fa69b1c",
-    "zod": "^3.22.2"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20.12.5",
-    "prisma": "^5.11.0",
+    "@types/node": "^22.13.10",
+    "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.4"
+    "typescript": "^5.8.2"
   }
 }
