--- a/typescript_app/package.json
+++ b/typescript_app/package.json
@@ -33,7 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.33",
-
+    "@tailwindcss/postcss": "^4.0.12",
     "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-table": "^8.21.2",
     "@types/react": "19.0.10",
@@ -62,8 +62,8 @@
     "resend": "^4.1.2",
     "sharp": "^0.33.5",
     "stripe": "^17.7.0",
-    "tailwind-merge": "^1.14.2",
-    "tailwindcss": "3.3.12",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
     "youtube-transcript": "github:sinedied/youtube-transcript#a10a073ac325b3b88018f321fa1bc5d62fa69b1c",
